--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/alien-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raw Notes</title>
+    <decription>Raw Notes - A simple note-taking app by Kumar Sahani</description>
   </head>
   <body>
     <div id="root"></div>
