Added meta tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/alien-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raw Notes</title>
-    <decription>Raw Notes - A simple note-taking app by Kumar Sahani</description>
+    <meta
+      name="description"
+      content="Raw Notes - A simple note-taking app by Kumar Sahani"
+    />
+    <meta
+      property="og:title"
+      content="Raw Notes - A simple note-taking app by Kumar Sahani"
+    />
+    <meta
+      property="og:description"
+      content="Raw Notes is a simple, clean note-taking app built by Kumar Sahani."
+    />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
